style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  overflow: hidden;
}

/* --------------------------------- homepage section */
#home {
  background-color: #f8f1f1;
  font-family: "Montserrat", sans-serif;
  min-width: 300px;
  word-wrap: none;
}

/* navbar default */
.navbar {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  text-align: center;
  align-items: center;
  width: 100vw;
}

.navbar-logo {
  margin: 1rem;
}
.navbar-logo img {
  width: 50px;
}

.menu-list {
  display: none;
}

.navbar-contactButton {
  display: none;
}

.hamburger-menu {
  margin: 1rem 1rem;

  font-size: 2rem;
  text-align: center;
}

.open-menu,
.close-menu {
  color: #11698e;
  position: relative;
  z-index: 1;
}
.open-menu:hover,
.close-menu:hover,
.open-menu:active,
.close-menu:active {
  color: #16c79a;
}

/* default top right button is open-menu */
.close-menu::before {
  display: none;
}

/* this section is to test opened menu */

/* .close-menu::before {
  display: block;
}
.open-menu::before {
  display: none;
}

.menu-list {
  display: block;
} */

/* hero section */
.hero {
  padding: 1rem;
}

.hero-text {
  color: #19456b;
}
.hero h1 {
  font-size: 2.5rem;
  letter-spacing: 5px;
}
.hero h2 {
  font-size: 1.5rem;
  line-height: 2rem;
}
.hero h3 {
  font-size: 1.3rem;
  line-height: 2rem;
}
.hero-image {
  text-align: center;
}
.hero img {
  width: 250px;
}

.hero-buttons {
  height: 3rem;
  margin-top: 2rem;
}
.hero-buttons button {
  height: 100%;
  margin-right: 1rem;
  padding: 0.5rem;
  font-family: "Montserrat", sans-serif;
  font-weight: 600;
  background-color: #11698e;
  border-style: none;
  color: #f8f1f1;
  border-radius: 10px;
}
.hero-buttons button:active,
:focus {
  border-style: none;
  outline: none;
  background-color: #16c79a;
  color: #19456b;
}

/* screen res error */

.screenResError {
  display: none;
  color: white;
}

@media (max-width: 250px) {
  html {
    background-color: black;
  }
  #home {
    display: none;
  }
  .screenResError {
    display: block;
    text-align: center;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
  }
}
@media (min-width: 480px) {
  html {
    background-color: black;
  }

  .hero {
    display: flex;
    background-color: #11698e;
  }

  .hero-text {
    width: 100%;
    color: #f8f1f1;
  }
  .hero h1 {
    font-size: 2rem;
    letter-spacing: 3px;
  }
  .hero h2 {
    font-size: 1rem;
  }
  .hero h3 {
    font-size: 0.9rem;
  }
  .hero-buttons {
    margin-top: 1rem;
  }
  .hero-buttons button {
    font-size: 0.8rem;
    margin-right: 5px;
    background-color: #f8f1f1;
    color: #11698e;
    cursor: pointer;
  }
  .hero-buttons button:hover {
    font-size: 0.8rem;
    margin-right: 5px;
    background-color: #11698e;
    color: #f8f1f1;
    cursor: pointer;
  }
  .hero-buttons button:active {
    border-style: none;
    outline: none;
    background-color: #16c79a;
    color: #19456b;
  }

  .hero-image {
    text-align: right;
    display: inline;
    margin-top: 3rem;
    margin-bottom: 3rem;
    margin-right: auto;
  }
  .hero img {
    width: 200px;
  }
  .hero-text-and-buttons {
    height: auto;
    margin-top: 3rem;
    margin-bottom: 3rem;
    margin-left: auto;
  }
}

@media (min-width: 740px) {
  .menu-list {
    display: block;
    background-color: transparent;
    font-size: 1.2rem;
    height: auto;
    width: auto;
    position: relative;
  }
  .menu-list-item {
    display: inline;
    margin: 0 1rem;
    padding: 0;
  }

  .menu-list-item a {
    text-decoration: none;
    color: #19456b;
  }

  .navbar-contactButton {
    display: block;
  }
  .navbar-contactButton button {
    display: block;
    height: 100%;
    margin-right: 1rem;
    padding: 0.5rem;
    font-family: "Montserrat", sans-serif;
    font-weight: 400;
    background-color: #11698e;
    border-style: none;
    color: #f8f1f1;
    border-radius: 10px;
  }
  .navbar-contactButton :hover {
    background-color: #16c79a;
    color: #19456b;
    cursor: pointer;
  }

  .hamburger-menu {
    display: none;
  }
}

